# zencore-rs-v2

./: Cargo.toml  README.md
zencore-archive/: Cargo.toml
zencore-cli/: Cargo.toml
zencore-crypto/: Cargo.toml
zencore-lib/: Cargo.toml
zencore-themes/: Cargo.toml
zencore-tui/: Cargo.toml
zencore-utils/: Cargo.toml
zencore_archive/: Cargo.toml
zencore_cli/: Cargo.toml
zencore_cli/src/: main.rs
zencore_crypto/: Cargo.toml
zencore_themes/: Cargo.toml
zencore_tui/: Cargo.toml
zencore_utils/: Cargo.toml
zencore_utils/src/: banner.rs  lib.rs  log.rs
