[workspace]
members = ["zencore-archive","zencore-cli", "zencore-crypto", "zencore-themes", "zencore-tui", "zencore-utils"]
resolver = "3" 

[workspace.dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "registry"] }


